# fake-post-generator

./: .gitignore  README.md  pyproject.toml
docs/: AGENTS.md  ARCHITECTURE.md  CLI.md  DECISIONS.md  USAGE.md
examples/: accounts.yaml  comment_bank.yaml  render_all_tophet.py  render_example.py  render_thread_example.py  subreddits.yaml
src/fake_post_generator/: __init__.py  cli.py
src/fake_post_generator/core/: __init__.py  account.py  avatar.py  bank.py  layout.py  platform.py  registry.py  renderer.py  subreddit.py  templates.py  variant.py
src/fake_post_generator/core/banks/: __init__.py  default_names.py
tests/: test_smoke.py
